// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App/> render error 1`] = `
<div
  className="container shadow"
>
  <Connect(Counter) />
  <button
    className="button shadow"
    onClick={[Function]}
  >
    Test
  </button>
  <div>
    <Button
      onClick={[Function]}
      text="something went wrong!"
    />
  </div>
</div>
`;

exports[`<App/> render error before samples 1`] = `
<div
  className="container shadow"
>
  <Connect(Counter) />
  <button
    className="button shadow"
    onClick={[Function]}
  >
    Test
  </button>
  <div>
    <Button
      onClick={[Function]}
      text="error!"
    />
  </div>
</div>
`;

exports[`<App/> render loading before samples 1`] = `
<div
  className="container shadow"
>
  <Connect(Counter) />
  <button
    className="button shadow"
    onClick={[Function]}
  >
    Test
  </button>
  <div>
    <Button
      onClick={[Function]}
      text="loading..."
    />
  </div>
</div>
`;

exports[`<App/> render loading... 1`] = `
<div
  className="container shadow"
>
  <Connect(Counter) />
  <button
    className="button shadow"
    onClick={[Function]}
  >
    Test
  </button>
  <div>
    <Button
      onClick={[Function]}
      text="loading..."
    />
  </div>
</div>
`;

exports[`<App/> render no samples, no loading and no error 1`] = `
<div
  className="container shadow"
>
  <Connect(Counter) />
  <button
    className="button shadow"
    onClick={[Function]}
  >
    Test
  </button>
  <div>
    
  </div>
</div>
`;

exports[`<App/> render samples 1`] = `
<div
  className="container shadow"
>
  <Connect(Counter) />
  <button
    className="button shadow"
    onClick={[Function]}
  >
    Test
  </button>
  <div>
    <div>
      <Button
        onClick={[Function]}
        text="sample #1"
      />
    </div>
    <div>
      <Button
        onClick={[Function]}
        text="sample #2"
      />
    </div>
    <div>
      <Button
        onClick={[Function]}
        text="sample #3"
      />
    </div>
  </div>
</div>
`;
